# django-migration-dependencies

./: .gitignore  LICENSE  README.md  pyproject.toml
dmdg/: db.sqlite3
dmdg/bar/migrations/: 0001_initial.py  0002_auto_20230221_1542.py  0003_auto_20230221_1546.py
dmdg/dummy/: urls.py  wsgi.py
dmdg/foo/migrations/: 0001_initial.py  0002_auto_20230221_1543.py  0003_auto_20230221_1543.py
dmdg/foobar/migrations/: 0001_initial.py  0002_auto_20230221_1542.py
dmdg/migrations_graph/: views.py
dmdg/migrations_graph/templates/migrations_graph/: index.html
migrations_graph/dummy/: asgi.py  settings.py  urls.py
migrations_graph/foobar/: apps.py
migrations_graph/migrations_graph/: apps.py
